[workspace]
members = ["libarx", "arx", "tar2arx", "zip2arx"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.1"
authors = ["Matthieu Gautier <mgautier@kymeria.fr>"]
repository = "https://github.com/jubako/arx"
homepage = "https://github.com/jubako/arx"
license = "MIT"

[workspace.dependencies]
jbk = { git = "https://github.com/jubako/jubako.git", package = "jubako", version = "0.3.0-dev" }
clap = { version = "4.4.5", features = ["derive"] }
clap_mangen = "0.2.20"
clap_complete = "4.5.0"
human-panic = "1.2.3"
indicatif = "0.17.7"
anyhow = "1.0.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

