[workspace]
members = ["libarx", "arx", "tar2arx", "zip2arx", "python"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.4.0-dev.0"
authors = ["Matthieu Gautier <mgautier@kymeria.fr>"]
repository = "https://github.com/jubako/arx"
homepage = "https://github.com/jubako/arx"
license = "MIT"
license-file = "LICENSE-MIT"

[workspace.dependencies]
jbk = { git = "https://github.com/jubako/jubako.git", package = "jubako", features = ["clap"], version = "0.3.3" }
clap = { version = "4.4.5", features = ["derive", "cargo"] }
clap_mangen = "0.2.20"
clap_complete = "4.5.0"
human-panic = "2.0.1"
indicatif = "0.17.7"
anyhow = "1.0.75"
git-version = "0.3.9"
const_format = "0.2.33"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

