[package]
name = "arx"
description = "A file archive based on Jubako container."
categories = ["command-line-utilities", "compression", "filesystem"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arx = { path = "../libarx", version = "0.2.0", package="libarx" }
jbk.workspace = true
clap.workspace = true
indicatif.workspace = true
env_logger = "0.10.0"
anyhow = "1.0.75"
log = "0.4.20"

[dev-dependencies]
arx_test_dir = { git = "https://framagit.org/jubako/arx_test_dir.git" }
tempfile = "3.8.0"

[features]
default = ["zstd"]
in_ci = []
lz4 = ["arx/lz4"]
zstd = ["arx/zstd"]
lzma = ["arx/lzma"]
