[package]
name = "arx"
description = "A file archive based on Jubako container."
categories = ["command-line-utilities", "compression", "filesystem"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arx = { path = "../libarx", version = "0.2.1", package="libarx", features=["cmd_utils"] }
jbk.workspace = true
clap.workspace = true
clap_mangen.workspace = true
clap_complete.workspace = true
indicatif.workspace = true
human-panic.workspace = true
anyhow.workspace = true
env_logger = "0.10.0"
log = "0.4.20"
tempfile = "3.10.1"

[target.'cfg(not(windows))'.dev-dependencies]
arx_test_dir = { git = "https://github.com/jubako/arx_test_dir.git" }
tempfile = "3.8.0"

[features]
default = ["zstd", "fuse"]
in_ci = []
lz4 = ["arx/lz4"]
zstd = ["arx/zstd"]
lzma = ["arx/lzma"]
fuse = ["arx/fuse", "arx_test_dir/fuse"]

[[bin]]
name = "auto_mount"
required-features = ["fuse"]

[[bin]]
name = "mount_fuse_arx"
required-features = ["fuse"]

[[test]]
name = "create"
required-features = ["fuse"]
