[package]
name = "arx"
description = "A fast, mountable file archive based on Jubako container. Replacement of tar and zip."
categories = ["command-line-utilities", "compression", "filesystem"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
default-run = "arx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arx = { path = "../libarx", version = "0.4.0", package="libarx", features=["cmd_utils"] }
jbk.workspace = true
clap.workspace = true
clap_mangen.workspace = true
clap_complete.workspace = true
indicatif.workspace = true
human-panic.workspace = true
anyhow.workspace = true
git-version.workspace = true
const_format.workspace = true
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "humantime"]}
log = "0.4.20"
tempfile = "3.10.1"
libc = "0.2.158"
glob = "0.3.1"
color-print = "0.3.7"


[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"]}
lipsum = "0.9.0"
tempfile = "3.8.0"
filetime = "0.2.25"
rustest = "0.3.1"
walkdir = "2.4.0"
relative-path = "2.0.1"
regex = "1.12.2"

[features]
default = ["zstd", "fuse"]
in_ci = []
lz4 = ["arx/lz4"]
zstd = ["arx/zstd"]
lzma = ["arx/lzma"]
fuse = ["arx/fuse"]

[[bin]]
name = "auto_mount"
required-features = ["fuse"]

[[bin]]
name = "mount_fuse_arx"
required-features = ["fuse"]

[[test]]
name = "create"
required-features = ["fuse"]
harness = false

[[test]]
name = "extract_mount"
harness = false
