[package]
name = "libarx"
description = "The library to handle arx file, the file archive format based on Jubako."
categories = ["compression", "filesystem"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jubako.workspace = true
typenum = "1.15.0"
fuser = "0.12.0"
libc = "0.2.134"
lru = "0.8.1"
fxhash = "0.2.1"
blake3 = "1.3.3"
tempfile = "3.5.0"
walkdir = "2.3.3"
