[package]
name = "libarx"
description = "The library to handle arx file, the file archive format based on Jubako."
categories = ["compression", "filesystem"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jbk.workspace = true
clap = { workspace=true, optional =true }
libc = "0.2.148"
lru = "0.11.1"
fxhash = "0.2.1"
blake3 = "1.5.0"
tempfile = "3.8.0"
walkdir = "2.4.0"
relative-path = "1.9.2"
epochs = "0.2.4"
rayon = "1.10.0"

[target.'cfg(not(windows))'.dependencies]
fuser = "0.13.0"

[features]
cmd_utils = [ "dep:clap"]
lz4 = ["jbk/lz4"]
zstd = ["jbk/zstd"]
lzma = ["jbk/lzma"]
