[package]
name = "python-libarx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libarx"
crate-type = ["cdylib"]

[dependencies]
jbk.workspace = true
arx = { path = "../libarx", version = "0.3.0", package = "libarx"}
pyo3 = "0.20.0"
