[package]
name = "python-libarx"
description = "Python wrapper around arx library."
categories = ["compression", "filesystem"]
keywords = ["archive-format", "extract", "file-format", "compression"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libarx"
crate-type = ["cdylib"]

[dependencies]
jbk.workspace = true
arx = { path = "../libarx", version = "0.3.0", package = "libarx"}
pyo3 = "0.20.0"
