[package]
name = "tar2arx"
description = "Convert a tar archive into a arx archive."
categories = ["command-line-utilities", "compression", "filesystem"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arx = { path = "../libarx", version = "0.2.1", package="libarx", features=["cmd_utils"] }
jbk.workspace = true
clap.workspace = true
indicatif.workspace = true
clap_mangen.workspace = true
clap_complete.workspace = true
human-panic.workspace = true
anyhow.workspace = true
tar = "0.4.39"
niffler = "2.5.0"
ureq = { version = "2.9.6", optional = true }

[features]
default = ["http", "zstd"]
lzma = ["arx/lzma"]
zstd = ["arx/zstd"]
lz4 = ["arx/lz4"]
http = ["dep:ureq"]
