[package]
name = "zip2arx"
description = "Convert a zip archive into a arx archive."
categories = ["command-line-utilities", "compression", "filesystem"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arx = { path = "../libarx", version = "0.2.0", package="libarx" }
jubako.workspace = true
clap.workspace = true
indicatif.workspace = true
zip = "0.6.6"
