[package]
name = "zip2arx"
description = "Convert a zip archive into a arx archive."
categories = ["command-line-utilities", "compression", "filesystem"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arx = { path = "../libarx", version = "0.3.0", package="libarx", features=["cmd_utils"] }
jbk.workspace = true
clap.workspace = true
indicatif.workspace = true
clap_mangen.workspace = true
clap_complete.workspace = true
human-panic.workspace = true
zip = "2.2.0"
flate2 = "1.0.26"
time = "0.3.36"

[features]
default = ["zstd"]
lzma = ["arx/lzma"]
zstd = ["arx/zstd"]
lz4 = ["arx/lz4"]
